--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,7 +7,7 @@
 </head>
 <%- include('partials/header'); -%>
 <div class="main">
-    <h1>DASHBOARD : <%= user.firstname %> </h1>
+    <h1>Hello <%= user.firstname %> ! </h1>
     <p><a href="/jobcreation">Create a new job</a></p>
     <div class="filters">
       <div class="filter_by">
