--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,12 +2,10 @@
 <body>
   <div class="header-container" >
     <header class="header">
-      <div class="logo"><a href="">LOGO</a></div>
+      <div class="logo"><a href="../dashboard">Home</a></div>
       <nav>
         <div class="user-menu-small">
-          <a class="userlogo" href="">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="clickable image">
-          </a>
+        
           <dialog class="modal-menu-small">
             <div>
               <ul class="user-menu-small-list">
