--- a/public/jobupdate.scss
+++ b/public/jobupdate.scss
@@ -86,6 +86,12 @@ body{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                gap: 5px;
+            }
+            input{
+                max-width: 200px;
+                padding: 2px;
+                border-radius: 25px;
             }
         }
     }
