--- a/public/job.scss
+++ b/public/job.scss
@@ -49,7 +49,9 @@ body{
             justify-content: space-between;
             .logo{
                 a{
-                    text-decoration: none;                    
+                    font-size: 24px;
+                    text-decoration: none; 
+                    font-weight: bold;                       
                 }
             }
             nav{
