--- a/public/jobcreation.css
+++ b/public/jobcreation.css
@@ -50,7 +50,9 @@ body .header-container header {
   justify-content: space-between;
 }
 body .header-container header .logo a {
+  font-size: 24px;
   text-decoration: none;
+  font-weight: bold;
 }
 body .header-container header nav .user-menu-small .userlogo {
   display: none;
