--- a/public/jobupdate.css
+++ b/public/jobupdate.css
@@ -49,7 +49,9 @@ body .header-container header {
   justify-content: space-between;
 }
 body .header-container header .logo a {
+  font-size: 24px;
   text-decoration: none;
+  font-weight: bold;
 }
 body .header-container header nav .user-menu-small .modal-menu-small div .user-menu-small-list li a {
   color: red;
