--- a/public/login.scss
+++ b/public/login.scss
@@ -44,7 +44,9 @@ body{
             justify-content: space-between;
             .logo{
                 a{
-                    text-decoration: none;                    
+                    font-size: 24px;
+                    text-decoration: none; 
+                    font-weight: bold;                   
                 }
             }
             nav{
