--- a/public/profile.scss
+++ b/public/profile.scss
@@ -52,7 +52,9 @@ body{
             justify-content: space-between;
             .logo{
                 a{
-                    text-decoration: none;                    
+                    font-size: 24px;
+                    text-decoration: none; 
+                    font-weight: bold;                      
                 }
             }
             nav{
