--- a/public/login.css
+++ b/public/login.css
@@ -14,6 +14,16 @@ a {
   justify-content: space-between;
   align-items: center;
 }
+.right-nav form label {
+  padding: 5px;
+  border-radius: 25px;
+  background-color: darkcyan;
+  color: white;
+}
+
+#btn {
+  display: none;
+}
 
 input {
   width: 200px;
@@ -34,6 +44,22 @@ header, footer {
 .userlogo img {
   width: 35px;
   height: 35px;
+}
+
+.register {
+  padding: 10px;
+  text-align: center;
+}
+.register span a {
+  font-size: 24px;
+  color: white;
+  padding: 10px;
+  font-weight: bold;
+  background-color: red;
+  border-radius: 25px;
+}
+.register span a:hover {
+  background-color: green;
 }
 
 body {
