--- a/public/profile.scss
+++ b/public/profile.scss
@@ -8,6 +8,19 @@
     flex-direction: row;    
     justify-content: space-between;
     align-items: center;
+    form{
+        label{
+            padding: 5px;
+            border-radius: 25px;
+            background-color: darkcyan ;
+            color: white;
+        }
+        
+    }
+}
+#btn{
+    display: none;
+    
 }
 a{
     text-decoration: none;
