--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,6 +16,7 @@
             <input id="password" type="password" name="password">
             <button class="btn">Log in</button>
         </form>
+        <p class="register">Not already registered ? <span><a href="/signup">Sign up !</a></span></p>
     </div>
   
 
