--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,8 @@
           <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="clickable image">
         </a>
         <form action="/logout" method="post">
-          <button>Logout</button>
+          <label for="btn">Logout</label>
+          <button id="btn"></button>
         </form>
       
       </div>
