--- a/public/jobcreation.css
+++ b/public/jobcreation.css
@@ -14,6 +14,16 @@ a {
   justify-content: space-between;
   align-items: center;
 }
+.right-nav form label {
+  padding: 5px;
+  border-radius: 25px;
+  background-color: darkcyan;
+  color: white;
+}
+
+#btn {
+  display: none;
+}
 
 header, footer {
   max-width: 1440px;
