--- a/public/profile.css
+++ b/public/profile.css
@@ -10,6 +10,16 @@
   justify-content: space-between;
   align-items: center;
 }
+.right-nav form label {
+  padding: 5px;
+  border-radius: 25px;
+  background-color: darkcyan;
+  color: white;
+}
+
+#btn {
+  display: none;
+}
 
 a {
   text-decoration: none;
