--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,6 +17,13 @@
             <button class="btn">Log in</button>
         </form>
         <p class="register">Not already registered ? <span><a href="/signup">Sign up !</a></span></p>
+        <hr>
+        <div class="login-strategies">
+            <a href="/auth/google">Sign up with Google
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/480px-Google_%22G%22_logo.svg.png" alt="">
+            </a>
+        </div>
+        
     </div>
   
 
